Workコメント編集

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <p>架空のライフスタイルマガジンのホームページ</p>
           <p><br></p>
           <p>-制作期間-</p>
-          <p>2週間程度</p>
+          <p>2週間程度（30時間）</p>
           <p><br></p>
           <p>-使用ツール-</p>
           <p>HTML, CSS, Photoshop</p>
@@ -46,7 +46,8 @@
           <p>-こだわり-</p>
           <p>雑誌の表紙をPhotoshopを用いて制作。色鮮やかな雑誌の表紙に対して、全体的にシンプルなカラーのHPにしました。</p>
           <p>2カラム構成とし、雑誌の内容については左に配置。更新が多く、縦にスクロールすることを想定したコンテンツは右側に配置しました。</p>
-          <p>現在レスポンシブデザイン実装中、、、</p>
+          <p>また、レスポンシブデザインとなっております。</p>
+          <p>スマホ画面では、内容を詰め込みすぎないよう、メインコンテンツのみを残し、サブコンテンツには別リンクを設けました。</p>
         </div>
       </div>
     
