Workのコメントの修正

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <p>-こだわり-</p>
           <p>雑誌の表紙をPhotoshopを用いて制作。色鮮やかな雑誌の表紙に対して、全体的にシンプルなカラーのHPにしました。</p>
           <p>2カラム構成とし、雑誌の内容については左に配置。更新が多く、縦にスクロールすることを想定したコンテンツは右側に配置しました。</p>
-          <p>また、レスポンシブデザインとなっております。</p>
+          <p>また、レスポンシブデザインを実装。</p>
           <p>スマホ画面では、内容を詰め込みすぎないよう、メインコンテンツのみを残し、サブコンテンツには別リンクを設けました。</p>
         </div>
       </div>
