aboutコメント追記

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <p>学生時代、数学が好きで高専に入学し、エンジニアを目指しました。興味をもったプログラミングと、自分の好きなことを掛け合わせたいと思い、Web業界への転身を決意。
           </p>
           <p><br></p>
-          <p>趣味：買い物、家事、模様替え</p>
+          <p>趣味：プログラミング、買い物、家事、模様替え</p>
           <p>スポーツ：マラソン、バドミントン</p>
           
 
