--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div id="header">
       <nav>
         <ul>
-          <li><a href=""></a></li>
+          <!-- <li><a href=""></a></li>
           <li><a href="">WORK</a></li>
-          <li><a href="">ABOUT</a></li>
+          <li><a href="">ABOUT</a></li> -->
         </ul>
       </nav>
     
