コメント変更

--- a/index.html
+++ b/index.html
@@ -47,10 +47,7 @@
       </div>
     
       <div id="comment">
-        <p>架空のホームページ作成や、既存サイトの模写コーディングを行なっています。共同制作者にわかりやすいよう、丁寧なコーディングを心がけています。デザインはシンプルにまとめて、きちんと情報が伝わることを大切にしています。</p>
-        <br>
-        <br>
-        <p>今後はユーザーを惹きつけ、クライアントに利益をもたらすことができるようなデザインを勉強していきたいです。</p>
+        <p>架空のホームページ作成や、既存サイトの模写コーディングを行なっています。デザインはシンプルにまとめて、きちんと情報が伝わることを意識しています。また、コードを見返した際にわかりやすいよう、丁寧なコーディングを心がけています。今後はユーザーを惹きつけ、クライアントに利益をもたらすことができるようなデザインを勉強していきたいです。</p>
         <br>
         <br>
         <p>制作環境</p>
@@ -97,7 +94,7 @@
         <div class="about">
           <p>デグチ ヒロキ</p>
           <p>大阪府在住。洋服好きの26歳。</p>
-          <p>繊維メーカーで勤務後、WEB業界へ転身。</p>
+          <p>繊維メーカーで勤務後、WEB業界への転身を目指す。</p>
           <p>CONTACT : deguchi37458@gmail.com</p>
         </div>
         
