--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <img src="image/about.png" alt="">
         <div class="about">
           <p>デグチ ヒロキ</p>
-          <p>大阪府在住。洋服好きの26歳。</p>
+          <p>奈良県在住。洋服好きの26歳。</p>
           <p>繊維メーカーで勤務後、WEB業界への転身を目指す。</p>
           <p>CONTACT : deguchi37458@gmail.com</p>
         </div>
