--- a/index.html
+++ b/index.html
@@ -107,5 +107,7 @@
         </div>
     </div>
   </div>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
