--- a/MONSTER BURGER/index.html
+++ b/MONSTER BURGER/index.html
@@ -7,49 +7,57 @@
   <title>MONSTER BURGUER</title>
 </head>
 <body>
-  <!-- ヘッダー -->
-  <header class="container">
-    <div class="header_contents">
-      <img class="logo" src="img/logo_sub.png" alt="">
-      <img class="logo" src="img/logo.png" alt="">
-      <ul>
-        <li><a href=""><img src="img/icon-twitter.png" alt=""></a></li>
-        <li><a href=""><img src="img/icon-instagram.png" alt=""></a></li>
-        <li><a href=""><img src="img/icon-facebook.png" alt=""></a></li>
-      </ul>
-    </div>
-    <div class="header_img">
-      <img class="humberger" src="img/humberger.png" alt="">
-    </div>
-  </header>
-
-  <!-- メイン -->
-  <main>
-    <div class="allow container"><img src="img/allow.png" alt=""></div>
-
-    <!-- ギャラリー -->
-    <div class="gallery container">
-      <h1>Gallery</h1>
-      <div class="gallery_contents">
-          <img src="img/gallery1.png" alt="">
-          <!-- ダミー -->
-          <div>・・・・・・・・・・</div>        
+  <!-- 包括 -->
+  <div id="wrapper">
+    <!-- ホーム -->
+    <div id="home">
+      <div id="header_contents">
+        <img class="logo" src="img/logo_sub.png" alt="">
+        <img class="logo" src="img/logo.png" alt="">
+        <ul>
+          <li class="sns"><a href=""><img src="img/icon-twitter.png" alt=""></a></li>
+          <li class="sns"><a href=""><img src="img/icon-instagram.png" alt=""></a></li>
+          <li class="sns"><a href=""><img src="img/icon-facebook.png" alt=""></a></li>
+        </ul>
+      </div>
+      <div id="header_img">
+        <img class="humberger" src="img/humberger.png" alt="">
       </div>
     </div>
-    <!-- インフォメーション -->
-    <div class="information container">
-      <h1>Information</h1>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3281.120849995564!2d135.50094641537908!3d34.67689928044051!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000e719c473e863%3A0x8bb475f3e443feba!2z44CSNTQyLTAwODEg5aSn6Ziq5bqc5aSn6Ziq5biC5Lit5aSu5Yy65Y2X6Ii55aC077yT5LiB55uu77yS4oiS77yWIOWkp-mYqui-suael-S8mumkqA!5e0!3m2!1sja!2sjp!4v1607828700626!5m2!1sja!2sjp"  width="950px" height="310px" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" ></iframe>
-      <img src="img/information.png" alt="">
-    </div>
-    <!-- フッター -->
-    <footer>
-      <div class="container">
-        <img src="img/c.png" alt="">
+  
+    <!-- メイン -->
+      <div id="allow"><img src="img/allow.png" alt=""></div>
+  
+    <!-- 包括（コンテナ） -->
+    <div id="container">
 
+      <!-- ギャラリー -->
+      <div id="gallery">
+        <h1>Gallery</h1>
+        <div id="gallery_contents">
+            <img src="img/gallery1.png" alt="">
+            <!-- ダミー -->
+            <div>・・・・・・・・・・</div>        
+        </div>
       </div>
-    </footer>
+  
+      <!-- インフォメーション -->
+      <div id="information">
+        <h1>Information</h1>
+        <div class="map">
+          <!--  -->
+        </div>
+        <img src="img/information.png" alt="">
+      </div>
+  
+      <!-- フッター -->
+        <div id="footer">
+          <img src="img/c.png" alt="">
+        </div>
 
-  </main>
+    </div>
+
+
+  </div>
 </body>
 </html>
