レスポンシブ対応

--- a/Dental Clinic/index.html
+++ b/Dental Clinic/index.html
@@ -12,7 +12,9 @@
   <header>
     <div class="header wrapper">
       <div class="headerLeft">
-        <img src="img/logo.png" alt="">
+        <a href="">
+          <img src="img/logo.png" alt="">
+        </a>
       </div>
       <div class="headerRight">
         <p class="sub">”地域に根付いた歯科医院”デンタルクリニック</p>
@@ -57,7 +59,7 @@
     <article>
       <div class="topImage">
         <!-- ここに画像を入れる -->
-        <p>640px × 280px</p>
+        <p class="pc">640px × 280px</p>
       </div>
       <div class="news">
         <h2>新着情報</h2>
@@ -91,7 +93,11 @@
             </ul>
           </div>
           <div class="footerInfo">
-            <p><span class="bold">デンタルクリニック</span>　東京都新宿区市谷左内町21-13 TEL:03-0000-0000</p>
+            <!-- PC用 -->
+            <p class="pc"><span class="bold">デンタルクリニック</span>　東京都新宿区市谷左内町21-13 TEL:03-0000-0000</p>
+            <!-- モバイル用 -->
+            <p class="mobile"><span class="bold">デンタルクリニック</span>　東京都新宿区市谷左内町21-13 <br>TEL:03-0000-0000</p>
+            <p></p>
           </div>
           <div class="copyright">
             <p>Copyright 2012 Dental Clinic CO.,LTD All Rights Reserved.</p>
