--- a/SPICE HOUSE/index.html
+++ b/SPICE HOUSE/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"> 
   <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>SPICE HOUSE</title>
   <!-- <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css"> -->
   <link  rel="stylesheet" href="stylesheet.css">
