--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
             <h2 class="work_title">Dental Clinic</h2>
           </a>
         </div>
+        <div class="work">
+          <a href="shibui/index.html">
+            <img src="image/shibui.png" alt="">
+            <h2 class="work_title">渋井設計事務所</h2>
+          </a>
+        </div>
       </div>
     
       <div id="comment">
