--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
     
       <div id="comment">
-        <p>架空のホームページ作成や、既存サイトの模写コーディングを行なっています。デザインはシンプルにまとめて、きちんと情報が伝わることを意識しています。また、コードを見返した際にわかりやすいよう、丁寧なコーディングを心がけています。今後はユーザーを惹きつけ、クライアントに利益をもたらすことができるようなデザインを勉強していきたいです。</p>
+        <p>既存サイトの模写コーディングや、自身で考えた架空のホームページ作成を行なっています。デザインはシンプルにまとめて、見やすいような余白、文字の大きさ、カラーを意識しています。また、コードを見返した際にわかりやすいよう、丁寧なコーディングを心がけています。<br>今後はユーザーを惹きつけ、クライアント様に利益をもたらすことができるようなデザインを勉強していきたいです。</p>
         <br>
         <br>
         <p>制作環境</p>
