--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>HIROKI DEGUCHI</title>
-  <!-- <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css"> -->
   <link href="stylesheet.css" rel="stylesheet">
+  <script src="script.js" defer></script>
 </head>
 <body>
     <div id="header">
@@ -105,15 +105,10 @@
         </div>
         
       </div>
-        <div id="return">
-          <a href="">
-            <p>↑</p>
-            <p>トップへ戻る</p>
-          </a>
+        <div id="toppage">
+            <p>↑<br>トップへ戻る</p>
         </div>
     </div>
   </div>
-  <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-  <script src="script.js"></script>
 </body>
 </html>
