--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
     <div id="header">
       <nav>
         <ul>
-          <!-- <li><a href=""></a></li>
-          <li><a href="">WORK</a></li>
-          <li><a href="">ABOUT</a></li> -->
+          <li>WORK</li>
+          <li>ABOUT</li>
         </ul>
       </nav>
     
@@ -109,6 +108,10 @@
             <p>↑<br>トップへ戻る</p>
         </div>
     </div>
+
+    <!-- JS編集用 -->
+    <div id="scroll"></div>
+
   </div>
 </body>
 </html>
