--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div id="header">
       <nav>
         <ul>
-          <li>WORK</li>
-          <li>ABOUT</li>
+          <li id="btn-work">WORK</li>
+          <li id="btn-about">ABOUT</li>
         </ul>
       </nav>
     
@@ -104,7 +104,7 @@
         </div>
         
       </div>
-        <div id="toppage">
+        <div id="btn-toppage">
             <p>↑<br>トップへ戻る</p>
         </div>
     </div>
