--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>HIROKI DEGUCHI</title>
   <link href="stylesheet.css" rel="stylesheet">
   <script src="script.js" defer></script>
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=scroll"></script>
 </head>
 <body>
     <div id="header">
