--- a/shibui/index.html
+++ b/shibui/index.html
@@ -138,26 +138,25 @@
        <h3>CONTACT</h3>
      </div>
 
-       <table id="form">
-         <tbody>
-           <tr>
-             <th>お名前</th>
-             <td><input type="text"></td>
-           </tr>
-           <tr>
-             <th>メールアドレス</th>
-             <td><input type="text"></td>
-           </tr>
-           <tr>
-             <th>お問い合わせ内容</th>
-             <td><textarea name="content"></textarea></td>
-           </tr>
-
-         </tbody>
-       </table>
-
-       <input type="submit" value="送信">
-
+       < <form action="">
+        <div class="form_item">
+         <label for="name">お名前</label>
+         <input type="text">
+        </div>
+ 
+        <div class="form_item">
+         <label for="email">メールアドレス</label>
+         <input type="text">
+        </div>
+ 
+        <div class="form_item">
+         <label for="message">お問い合わせ内容</label>
+         <textarea name="" id="" cols="30" rows="10"></textarea>
+        </div>
+ 
+        <input type="submit" value="送信">
+ 
+      </form>
    </div>
 
    <div id="footer">
