--- a/shibui/index.html
+++ b/shibui/index.html
@@ -138,7 +138,7 @@
        <h3>CONTACT</h3>
      </div>
 
-       < <form action="">
+      <form action="">
         <div class="form_item">
          <label for="name">お名前</label>
          <input type="text">
