--- a/shibui/index.html
+++ b/shibui/index.html
@@ -16,7 +16,7 @@
         <li class="list"><a href="">企業情報</a></li>
         <li class="list"><a href="">CSR活動</a></li>
         <li class="list"><a href="">採用情報</a></li>
-        <li class="list"><a href="">お問い合わせ</a></li>
+        <a href="">お問い合わせ</a>
       </ul>
     </nav>
     
@@ -60,10 +60,11 @@
    <!-- メッセージ -->
    <div id="message">
     <h2>MESSAGE</h2>
-    <p>国内はもとより世界の全域にわたり、あらゆる分野の建築の設計・監理・コンサルティングを行っております。</p>
-    <p>事業の企画段階から建設～運営に至るまでの全てのプロセスで、お客様の立場に立ち、<br>各専門分野の最先端技術と多くの実績に基づく知識を統合し、総合的な視点から時代を超える価値の高い建物を皆様とともに実現してまいります。</p>
-    <p>皆様のベストパートナーとして、時代を超える価値ある建築をともに実現してまいります。</p>
-
+    <div id="message_contents">
+      <p>国内はもとより世界の全域にわたり、あらゆる分野の建築の設計・監理・コンサルティングを行っております。</p>
+      <p>事業の企画段階から建設～運営に至るまでの全てのプロセスで、お客様の立場に立ち、<br>各専門分野の最先端技術と多くの実績に基づく知識を統合し、総合的な視点から時代を超える価値の高い建物を皆様とともに実現してまいります。</p>
+      <p>皆様のベストパートナーとして、時代を超える価値ある建築をともに実現してまいります。</p>
+    </div>
    </div>
 
    <!-- 事業内容 -->
@@ -151,7 +152,7 @@
  
         <div class="form_item">
          <label for="message">お問い合わせ内容</label>
-         <textarea name="" id="" cols="30" rows="10"></textarea>
+         <textarea name="" id="" ></textarea>
         </div>
  
         <input type="submit" value="送信">
