--- a/shibui/index.html
+++ b/shibui/index.html
@@ -16,9 +16,14 @@
         <li class="list"><a href="">企業情報</a></li>
         <li class="list"><a href="">CSR活動</a></li>
         <li class="list"><a href="">採用情報</a></li>
-        <a href="">お問い合わせ</a>
+        <li class="list"><a href="">お問い合わせ</a></li>
       </ul>
     </nav>
+    <nav class="show">
+      <img src="img/menu-button.png" alt="">
+      <p>menu</p>
+    </nav>
+    
     
     <h1>渋井設計事務所</h1>
 
