--- a/shibui/index.html
+++ b/shibui/index.html
@@ -13,8 +13,11 @@
     <div id="menu">
       <input id="check" type="checkbox">
       <label for="check" class="open">
-        <img src="img/menu-button.png" alt="">
-        <p>menu</p>
+        <!-- <img src="img/menu-button.png" alt="">
+        <p>menu</p> -->
+        <span></span>
+        <span></span>
+        <span></span>
       </label>
       <label for="check" class="back"></label>  
 
