--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div>
     
       <div id="comment">
-        <p>既存サイトの模写コーディングや、自身で考えた架空のホームページ作成を行なっています。デザインはシンプルにまとめて、見やすいような余白、文字の大きさ、カラーを意識しています。また、コードを見返した際にわかりやすいよう、丁寧なコーディングを心がけています。<br>今後はユーザーを惹きつけ、クライアント様に利益をもたらすことができるようなデザインを勉強していきたいです。</p>
+        <p>上記の制作実績は、自身で考えた架空のコーポレートサイトです。全て、レスポンシブデザインとなっており、スマートフォンでも、問題なくご覧いただけます。</p>
         <br>
         <br>
         <p>制作環境</p>
