--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
             <h2 class="work_title">渋井設計事務所</h2>
           </a>
         </div>
+        <div class="work">
+          <a href="#">
+            <img src="image/comingsoon.png" alt="">
+            <h2 class="work_title"></h2>
+          </a>
+        </div>
       </div>
     
       <div id="comment">
