--- a/index.html
+++ b/index.html
@@ -38,55 +38,16 @@
             <h2 class="work_title">Dental Clinic</h2>
           </a>
         </div>
-        <div class="work">
-          <a href="#">
-            <img src="image/comingsoon.png" alt="">
-            <h2 class="work_title"></h2>
-          </a>
-        </div>
       </div>
     
       <div id="comment">
-        <p>上記の制作実績は、自身で考えた架空のコーポレートサイトです。全て、レスポンシブデザインとなっており、スマートフォンでも、問題なくご覧いただけます。</p>
+        <p>上記の制作実績は、既存のサイトの模写コーディングおよび自身で考えた架空のコーポレートサイトです。全て、レスポンシブデザインとなっており、スマートフォンでも、問題なくご覧いただけます。</p>
         <br>
         <br>
         <p>制作環境</p>
         <p>HTML5, CSS3, Adobe Photoshop, Adobe XD</p>
       </div>
   
-      <!-- スキル画像省略 -->
-
-      <!-- <div id="skill">
-        <div class="skill">
-          <img src="image/html_mono.png" alt="">
-          <div>
-            <p class="skill_title">HTML</p>
-            <p></p>
-          </div>
-        </div>
-        <div class="skill">
-          <img src="image/css_mono.png" alt="">
-          <div>
-            <p class="skill_title">CSS</p>
-            <p></p>
-          </div>
-        </div>
-        <div class="skill">
-          <img src="image/photoshop_mono.png" alt="">
-          <div>
-            <p class="skill_title">Adobe Photoshop</p>
-            <p>簡単な切り抜きや合成ができます。</p>
-          </div>
-        </div>
-        <div class="skill">
-          <img src="image/xd_mono.png" alt="">
-          <div>
-            <p class="skill_title">Adobe XD</p>
-            <p></p>
-          </div>
-        </div>
-      </div> -->
-      
       <div id="footer">
         <div id="about">
           <img src="image/about.png" alt="">
