--- a/index.html
+++ b/index.html
@@ -26,26 +26,43 @@
   
     <div id="container">
       <div id="work">
-        <div class="work">
-          <a href="shibui/index.html">
+        <div class="work" id="shibui">
+          <!-- <a href="shibui/index.html"> -->
             <img src="image/shibui.png" alt="">
-            <h2 class="work_title">渋井設計事務所</h2>
           </a>
         </div>
+              
         <div class="work">
           <a href="Dental Clinic/index.html">
             <img src="image/dentalclinic.png" alt="">
-            <h2 class="work_title">Dental Clinic</h2>
           </a>
         </div>
       </div>
-    
+
+      <!-- ポップアップウインドウ -->
+      <div id="shibui-popup" class="popup">
+        <div>
+          <h3>渋井設計事務所</h3>
+          <p>DESIGN / CODING : 出口裕樹</p>
+          <p>使用言語 : HTML/CSS</p>
+          <p>使用ソフト : AdobeXD</p>
+          <p>URL : </p>
+        </div>
+        <div class="popup-contents">
+          <section>
+            <p>for PC</p><img src="image/shibui-capture-pc.png" alt="">
+          </section>
+          <aside>
+            <p>for Phone</p><img src="image/shibui-capture-phone.png" alt="">
+          </aside>
+        </div>
+      </div>
+
+      <div id="back" ></div>
+
+
       <div id="comment">
         <p>上記の制作実績は、既存のサイトの模写コーディングおよび自身で考えた架空のコーポレートサイトです。全て、レスポンシブデザインとなっており、スマートフォンでも、問題なくご覧いただけます。</p>
-        <br>
-        <br>
-        <p>制作環境</p>
-        <p>HTML5, CSS3, Adobe Photoshop, Adobe XD</p>
       </div>
   
       <div id="footer">
