add popup window dentalclinic

--- a/index.html
+++ b/index.html
@@ -27,15 +27,11 @@
     <div id="container">
       <div id="work">
         <div class="work" id="shibui">
-          <!-- <a href="shibui/index.html"> -->
             <img src="image/shibui.png" alt="">
-          </a>
         </div>
               
-        <div class="work">
-          <a href="Dental Clinic/index.html">
+        <div class="work" id="dentalClinic">
             <img src="image/dentalclinic.png" alt="">
-          </a>
         </div>
       </div>
 
@@ -43,7 +39,7 @@
       <div id="shibui-popup" class="popup">
         <div>
           <h3>渋井設計事務所</h3>
-          <p>DESIGN / CODING : 出口裕樹</p>
+          <p>DESIGN / CODING : デグチヒロキ</p>
           <p>使用言語 : HTML/CSS</p>
           <p>使用ソフト : AdobeXD</p>
           <p>URL : </p>
@@ -54,6 +50,24 @@
           </section>
           <aside>
             <p>for Phone</p><img src="image/shibui-capture-phone.png" alt="">
+          </aside>
+        </div>
+      </div>
+
+      <div id="dentalClinic-popup" class="popup">
+        <div>
+          <h3>Dental Clinic</h3>
+          <p>DESIGN / CODING : デグチヒロキ</p>
+          <p>使用言語 : HTML/CSS</p>
+          <p>使用ソフト : AdobeXD</p>
+          <p>URL : </p>
+        </div>
+        <div class="popup-contents">
+          <section>
+            <p>for PC</p><img src="image/DentalClinic-capture-pc.png" alt="">
+          </section>
+          <aside>
+            <p>for Phone</p><img src="image/DentalClinic-capture-phone.png" alt="">
           </aside>
         </div>
       </div>
