--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <p>DESIGN / CODING : デグチヒロキ</p>
           <p>使用言語 : HTML/CSS</p>
           <p>使用ソフト : AdobeXD</p>
-          <p>URL : </p>
+          <p>URL : https://deguchi37458.github.io/ShibuiDesignOffice/</p>
         </div>
         <div class="popup-contents">
           <section>
