fix shibui-popup p

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div>
           <h3>渋井設計事務所</h3>
           <p>DESIGN / CODING : デグチヒロキ</p>
-          <p>使用言語 : HTML/CSS</p>
+          <p>使用言語 : HTML/CSS, JavaScript</p>
           <p>使用ソフト : AdobeXD</p>
           <p>URL : https://deguchi37458.github.io/ShibuiDesignOffice/</p>
         </div>
