add Awesome Camera

--- a/index.html
+++ b/index.html
@@ -26,23 +26,49 @@
   
     <div id="container">
       <div id="work">
-        <div class="work" id="shibui">
+        <div id="awesomeCamera" class="work" >
+          <img src="image/awesomeCamera.png" alt="">
+        </div>
+
+        <div id="shibui" class="work" >
             <img src="image/shibui.png" alt="">
         </div>
               
-        <div class="work" id="dentalClinic">
+        <div id="dentalClinic" class="work" >
             <img src="image/dentalclinic.png" alt="">
         </div>
       </div>
 
       <!-- ポップアップウインドウ -->
+      <div id="awesomeCamera-popup" class="popup">
+        <div>
+          <h3>Awesome Camera</h3>
+          <p>DESIGN / CODING : デグチヒロキ</p>
+          <p>使用言語 : HTML/CSS, JavaScript</p>
+          <p>使用ソフト : AdobeXD</p>
+          <p>URL : <a href="https://deguchi37458.github.io/AwesomeCamera/" target="_blank">https://deguchi37458.github.io/AwesomeCamera/</a></p>
+        </div>
+        <div class="popup-contents">
+          <section>
+            <p>for PC</p>
+            <img src="image/AwesomeCamera-capture-pc1.png" alt="">
+            <img src="image/AwesomeCamera-capture-pc2.png" alt="">
+          </section>
+          <aside>
+            <p>for Phone</p>
+            <img src="image/AwesomeCameracapture-phone1.png" alt="">
+            <img src="image/AwesomeCamera-capture-phone2.png" alt="">
+          </aside>
+        </div>
+      </div>
+      
       <div id="shibui-popup" class="popup">
         <div>
           <h3>渋井設計事務所</h3>
           <p>DESIGN / CODING : デグチヒロキ</p>
           <p>使用言語 : HTML/CSS, JavaScript</p>
           <p>使用ソフト : AdobeXD</p>
-          <p>URL : https://deguchi37458.github.io/ShibuiDesignOffice/</p>
+          <p>URL : <a href="https://deguchi37458.github.io/ShibuiDesignOffice/" target="_blank">https://deguchi37458.github.io/ShibuiDesignOffice/</a></p>
         </div>
         <div class="popup-contents">
           <section>
@@ -71,6 +97,7 @@
           </aside>
         </div>
       </div>
+
 
       <div id="back" ></div>
 
